--- a/nuxeo-distribution-resources/pom.xml
+++ b/nuxeo-distribution-resources/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -65,9 +67,7 @@
             <id>assemble</id>
             <phase>package</phase>
             <configuration>
-              <buildFiles>
-                <buildFile>${basedir}/src/main/assemble/assembly.xml</buildFile>
-              </buildFiles>
+              <buildFile>${basedir}/src/main/assemble/assembly.xml</buildFile>
             </configuration>
             <goals>
               <goal>build</goal>
