--- a/nuxeo-distribution-tomcat/pom.xml
+++ b/nuxeo-distribution-tomcat/pom.xml
@@ -16,10 +16,6 @@
   <name>Nuxeo Tomcat Build</name>
   <description>Package Nuxeo CAP or DM WAR with Tomcat</description>
 
-  <modules>
-    <module>tests</module>
-  </modules>
-
   <dependencies>
     <dependency>
       <groupId>org.nuxeo.runtime</groupId>
@@ -90,6 +86,12 @@
     <profile>
       <id>nuxeo-dm</id>
       <!-- default profile for building Tomcat with only Nuxeo DM -->
+    </profile>
+    <profile>
+      <id>itest</id>
+      <modules>
+        <module>tests</module>
+      </modules>
     </profile>
   </profiles>
 
