--- a/nuxeo-chemistry-bindings/pom.xml
+++ b/nuxeo-chemistry-bindings/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-chemistry</artifactId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1-HF02</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
