--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-parent</artifactId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1-HF02</version>
   </parent>
 
   <artifactId>nuxeo-chemistry</artifactId>
@@ -31,7 +31,7 @@
 
   <properties>
     <chemistry.version>0.5-NX</chemistry.version>
-    <nuxeo.webengine.version>5.4.1.1-SNAPSHOT</nuxeo.webengine.version>
+    <nuxeo.webengine.version>5.4.1-HF02</nuxeo.webengine.version>
     <metro.version>1.4</metro.version>
   </properties>
 
