fix issue with pom packaging type, not installing zip artifact

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <module>nuxeo-startup-wizard</module>
     <module>nuxeo-launcher</module>
     <module>nuxeo-distribution-resources</module>
+    <module>nuxeo-distribution-cap/tests</module>
   </modules>
 
   <profiles>
