--- a/nuxeo-distribution-cap/pom.xml
+++ b/nuxeo-distribution-cap/pom.xml
@@ -11,15 +11,11 @@
   </parent>
 
   <artifactId>nuxeo-distribution-cap</artifactId>
-  <packaging>pom</packaging>
+  <packaging>zip</packaging>
   <name>Nuxeo CAP</name>
   <description>
     Nuxeo Content Application Platform EAR.
   </description>
-
-  <modules>
-    <module>tests</module>
-  </modules>
 
   <dependencies>
     <dependency>
@@ -690,15 +686,6 @@
         <configuration>
           <buildFile>${basedir}/src/main/assemble/assembly.xml</buildFile>
         </configuration>
-        <executions>
-          <execution>
-            <id>packaging</id>
-            <goals>
-              <goal>build</goal>
-            </goals>
-            <phase>package</phase>
-          </execution>
-        </executions>
       </plugin>
     </plugins>
   </build>
