ignore nuxeo-distribution-cap/tests/bin

--- a/.hgignore
+++ b/.hgignore
@@ -26,6 +26,7 @@ nuxeo-distribution-windows/**/obj
 nuxeo-distribution-windows/**/bin
 .DS_Store
 nuxeo-distribution-osgi/plugins/addons/**/*
+nuxeo-distribution-cap/tests/bin
 
 # we are trying not to ignore: nuxeo-distribution-jboss/src/main/resources/jboss/bin/
 syntax: regexp
