fix typo in theme background

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
@@ -1,6 +1,6 @@
 leftcolumntitle=#cccccc
 white=#ffffff
-blue.lite=#f2f7fc
+blue.light=#f2f7fc
 blue.sky=#ddeeff
 info=#f2f7fc url(${org.nuxeo.ecm.contextPath}/icons/tip.gif) 2px 3px no-repeat
 tooltip=#f2f7fc url(${org.nuxeo.ecm.contextPath}/icons/lightbulb.png) 2px 3px no-repeat scroll
