NXP-6672 - reorganize folders

--- a/nuxeo-distribution-tomcat-tests/pom.xml
+++ b/nuxeo-distribution-tomcat-tests/pom.xml
@@ -5,6 +5,7 @@
     <groupId>org.nuxeo.ecm.distribution</groupId>
     <artifactId>nuxeo-distribution</artifactId>
     <version>5.4.2-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <groupId>org.nuxeo.ecm.distribution</groupId>
