--- a/nuxeo-distribution-cap-tests/pom.xml
+++ b/nuxeo-distribution-cap-tests/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.nuxeo.ecm.distribution</groupId>
     <artifactId>nuxeo-distribution</artifactId>
     <version>5.4.2-SNAPSHOT</version>
-    <relativePath>../../pom.xml</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>nuxeo-distribution-cap-tests</artifactId>
