align on Nuxeo 5.4.1

--- a/nuxeo-dam-distribution/pom.xml
+++ b/nuxeo-dam-distribution/pom.xml
@@ -15,7 +15,7 @@
   <description>Build package distributions of Nuxeo DAM applications</description>
 
   <properties>
-    <nuxeo.distribution.version>5.4.1-SNAPSHOT</nuxeo.distribution.version>
+    <nuxeo.distribution.version>5.4.1</nuxeo.distribution.version>
     <nuxeo.platform.categorization.version>5.4.0.1</nuxeo.platform.categorization.version>
   </properties>
 
