--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.1-SNAPSHOT</version>
+    <version>5.4.1</version>
   </parent>
 
   <groupId>org.nuxeo.dam</groupId>
