--- a/nuxeo-platform-wss-backend/pom.xml
+++ b/nuxeo-platform-wss-backend/pom.xml
@@ -78,4 +78,18 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <!-- All tests disabled as this module is now unused -->
+            <exclude>**/*Test*.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
