Add maven repositories

--- a/pom.xml
+++ b/pom.xml
@@ -43,4 +43,21 @@
 
   </dependencies>
 
+  <repositories>
+   <repository>
+     <id>public</id>
+     <url>http://maven.nuxeo.org/public</url>
+     <snapshots>
+       <enabled>false</enabled>
+     </snapshots>
+   </repository>
+   <repository>
+     <id>public-snapshot</id>
+     <url>http://maven.nuxeo.org/public-snapshot</url>
+     <snapshots>
+       <enabled>true</enabled>
+     </snapshots>
+   </repository>
+ </repositories> 
+
 </project>
