NXP-6628: improve quicksearch gadget

--- a/nuxeo-opensocial-gadgets/src/main/resources/gadget/quicksearch/dynamic_messages.properties
+++ b/nuxeo-opensocial-gadgets/src/main/resources/gadget/quicksearch/dynamic_messages.properties
@@ -7,3 +7,5 @@ label.searchResultsFor=Search results for
 label.search.compactMode=Compact
 label.search.stdMode=Standard
 label.search.displayMode=Display Mode
+label.gadget.no.document=Whatever
+label.gadget.quicksearch.description=Type a text to start the document search
