--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
     <module>nuxeo-user-center</module>
     <module>nuxeo-platform-shibboleth-groups-web</module>
     <module>nuxeo-platform-user-dashboard-compat</module>
+    <module>nuxeo-platform-rendition</module>
   </modules>
 
   <repositories>
