--- a/nuxeo-platform-jbpm/nuxeo-platform-jbpm-automation/pom.xml
+++ b/nuxeo-platform-jbpm/nuxeo-platform-jbpm-automation/pom.xml
@@ -32,6 +32,10 @@
       <artifactId>nuxeo-platform-jbpm-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-webapp-base</artifactId>
+    </dependency>
+    <dependency>
       <groupId>net.sf.json-lib</groupId>
       <artifactId>json-lib</artifactId>
       <classifier>jdk15</classifier>
