--- a/nuxeo-platform-tag-service/nuxeo-platform-tag-core/pom.xml
+++ b/nuxeo-platform-tag-service/nuxeo-platform-tag-core/pom.xml
@@ -83,6 +83,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-ws</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-storage-sql-test</artifactId>
       <version>${nuxeo.core.version}</version>
