--- a/nuxeo-admin-center/nuxeo-admin-center/src/test/resources/configurator/nuxeo.conf
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/test/resources/configurator/nuxeo.conf
@@ -7,7 +7,7 @@ LOG_DIR="logs"
 PID_DIR="bin"
 
 # See templates/README.txt for customization parameters.
-nuxeo.templates=default
+nuxeo.templates=default,custom
 #nuxeo.bind.address=0.0.0.0
 
 test.nuxeo.conf = true
