DAM-601: add missing dependency

--- a/nuxeo-dam-webapp-core/pom.xml
+++ b/nuxeo-dam-webapp-core/pom.xml
@@ -64,9 +64,13 @@
       <groupId>org.richfaces.framework</groupId>
       <artifactId>richfaces-api</artifactId>
     </dependency>
-        <dependency>
+    <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
     </dependency>
     <dependency>
       <groupId>de.schlichtherle.io</groupId>
