--- a/nuxeo-platform-signature-core/pom.xml
+++ b/nuxeo-platform-signature-core/pom.xml
@@ -52,6 +52,10 @@
    <artifactId>nuxeo-platform-usermanager-api</artifactId>
   </dependency>
   <dependency>
+   <groupId>commons-io</groupId>
+   <artifactId>commons-io</artifactId>
+  </dependency>
+  <dependency>
    <groupId>org.nuxeo.ecm.platform</groupId>
    <artifactId>nuxeo-platform-usermanager-core</artifactId>
    <scope>test</scope>
