--- a/nuxeo-platform-wi-backend/pom.xml
+++ b/nuxeo-platform-wi-backend/pom.xml
@@ -34,10 +34,8 @@
       <artifactId>nuxeo-generic-wss-handler</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.nuxeo.ecm.webdav</groupId>
+      <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-webdav</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
