--- a/nuxeo-webengine-features/nuxeo-webengine-blogs-core/pom.xml
+++ b/nuxeo-webengine-features/nuxeo-webengine-blogs-core/pom.xml
@@ -19,7 +19,11 @@
   </properties>
 
   <dependencies>
-     
+    <dependency>
+      <groupId>org.nuxeo.ecm.webengine</groupId>
+      <artifactId>nuxeo-webengine-core</artifactId>
+    </dependency>
+
       <dependency>
         <groupId>org.nuxeo.ecm.webengine</groupId>
         <artifactId>nuxeo-webengine-blogs-api</artifactId>
