--- a/nuxeo-platform-localconfiguration-web/pom.xml
+++ b/nuxeo-platform-localconfiguration-web/pom.xml
@@ -22,6 +22,10 @@
       <artifactId>nuxeo-platform-ui-web</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-webapp-base</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.theme</groupId>
       <artifactId>nuxeo-theme-core</artifactId>
     </dependency>
