NXS-13 - sync with ecr

--- a/nuxeo-features-test/src/main/resources/webengine/web/WEB-INF/web.xml
+++ b/nuxeo-features-test/src/main/resources/webengine/web/WEB-INF/web.xml
@@ -49,7 +49,7 @@
 
   <servlet>
     <servlet-name>Nuxeo WebEngine Servlet</servlet-name>
-    <servlet-class>org.nuxeo.ecm.webengine.jaxrs.servlet.JerseyServlet</servlet-class>
+    <servlet-class>org.nuxeo.ecm.webengine.app.jersey.WebEngineServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>Nuxeo WebEngine Servlet</servlet-name>
