--- a/nuxeo-automation/nuxeo-automation-server/pom.xml
+++ b/nuxeo-automation/nuxeo-automation-server/pom.xml
@@ -108,6 +108,13 @@
       <version>${nuxeo.features.version}</version>
       <scope>test</scope>
     </dependency>
+    <!-- For webengine servlet? -->
+    <dependency>
+      <groupId>org.nuxeo.ecm.webengine</groupId>
+      <artifactId>nuxeo-webengine-core</artifactId>
+      <version>${nuxeo.webengine.version}</version>
+      <scope>test</scope>
+    </dependency>    
     <dependency>
       <groupId>org.mortbay.jetty</groupId>
       <artifactId>jetty</artifactId>
