NXP-6772 - In layout manager, never remove the last zone

--- a/nuxeo-opensocial-container/src/main/java/org/nuxeo/opensocial/container/client/ContainerConstants.properties
+++ b/nuxeo-opensocial-container/src/main/java/org/nuxeo/opensocial/container/client/ContainerConstants.properties
@@ -22,3 +22,4 @@ save = Save
 choose = Choose
 createdBy = Created by
 folderSelection = File selection
+cantDeleteLastZoneError = At least one zone must be defined.
