--- a/nuxeo-opensocial-gadgets/build.xml
+++ b/nuxeo-opensocial-gadgets/build.xml
@@ -19,7 +19,7 @@
   <property name="nuxeo.ear" value="nuxeo.ear" />
   <property name="mvn.opts" value="" />
   <property name="lm.portal.dir.web.module" value="${lm.portal.dir}/web/modules/org.nuxeo.opensocial.spaces" />
-  <property name="webengine.bundle.dir" value="${tomcat.dir}/bundles"/>
+  <property name="webengine.bundle.dir" value="${tomcat.dir}/nxserver/bundles"/>
 
   <condition property="osfamily-unix">
     <os family="unix" />
