--- a/nuxeo-theme-core/pom.xml
+++ b/nuxeo-theme-core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.theme</groupId>
     <artifactId>nuxeo-theme-parent</artifactId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1-HF03</version>
   </parent>
 
   <artifactId>nuxeo-theme-core</artifactId>
