--- a/nuxeo-opencmis-bindings/pom.xml
+++ b/nuxeo-opencmis-bindings/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-chemistry</artifactId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1-HF03</version>
   </parent>
 
   <artifactId>nuxeo-opencmis-bindings</artifactId>
@@ -18,8 +18,8 @@
   <description>Nuxeo Core: Chemistry OpenCMIS Bindings</description>
 
   <properties>
-    <nuxeo.version>5.4.1.1-SNAPSHOT</nuxeo.version>
-    <nuxeo.opencmis.version>5.4.1.1-SNAPSHOT</nuxeo.opencmis.version>
+    <nuxeo.version>5.4.1-HF03</nuxeo.version>
+    <nuxeo.opencmis.version>5.4.1-HF03</nuxeo.opencmis.version>
     <chemistry.opencmis.version>0.2.0-incubating-r1031674</chemistry.opencmis.version>
   </properties>
 
