maap-51: allows advanced search even when administrator didn't configure one

--- a/nuxeo-platform-localconfiguration-web/pom.xml
+++ b/nuxeo-platform-localconfiguration-web/pom.xml
@@ -38,6 +38,13 @@
       <groupId>javax.faces</groupId>
       <artifactId>jsf-api</artifactId>
     </dependency>
+    <dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-all</artifactId>
+    	<version>1.8.5</version>
+    	<type>jar</type>
+    	<scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
