NXP-6815 upgrade pdfbox 1.5.0

--- a/pom.xml
+++ b/pom.xml
@@ -1242,9 +1242,9 @@
         <scope>provided</scope>
       </dependency>
       <dependency>
-        <groupId>pdfbox</groupId>
+        <groupId>org.apache.pdfbox</groupId>
         <artifactId>pdfbox</artifactId>
-        <version>0.7.3</version>
+        <version>1.5.0</version>
       </dependency>
       <dependency>
         <groupId>org.bouncycastle</groupId>
