NXP-6815 upgrade pdfbox 1.5.0

--- a/nuxeo-core-convert-plugins/pom.xml
+++ b/nuxeo-core-convert-plugins/pom.xml
@@ -35,7 +35,7 @@
     </dependency>
 
     <dependency>
-      <groupId>pdfbox</groupId>
+      <groupId>org.apache.pdfbox</groupId>
       <artifactId>pdfbox</artifactId>
     </dependency>
     <dependency>
