NXP-6815 pdfbox upgrade (test dependencies)

--- a/nuxeo-platform-convert/pom.xml
+++ b/nuxeo-platform-convert/pom.xml
@@ -80,7 +80,7 @@
 
     <!-- scope test -->
     <dependency>
-      <groupId>pdfbox</groupId>
+      <groupId>org.apache.pdfbox</groupId>
       <artifactId>pdfbox</artifactId>
       <scope>test</scope>
     </dependency>
