--- a/nuxeo-platform-rendition-publisher/pom.xml
+++ b/nuxeo-platform-rendition-publisher/pom.xml
@@ -30,6 +30,10 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-publisher-jbpm</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-commandline-executor</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>commons-lang</groupId>
