--- a/nuxeo-opensocial-server/pom.xml
+++ b/nuxeo-opensocial-server/pom.xml
@@ -22,6 +22,10 @@
       <artifactId>nuxeo-runtime-osgi</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.runtime</groupId>
+      <artifactId>nuxeo-launcher-commons</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-usermanager-api</artifactId>
     </dependency>
