--- a/nuxeo-webdav/pom.xml
+++ b/nuxeo-webdav/pom.xml
@@ -19,14 +19,17 @@
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-server</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-core</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.java.dev.webdav</groupId>
       <artifactId>webdav-jaxrs</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <!-- dependencies on Nuxeo -->
