--- a/pom.xml
+++ b/pom.xml
@@ -296,6 +296,11 @@
         <artifactId>nuxeo-platform-wi-backend</artifactId>
         <version>${nuxeo.addons.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-login-digest</artifactId>
+        <version>${nuxeo.addons.version}</version>
+      </dependency>
 
       <!-- User Center -->
       <dependency>
