--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
@@ -4,7 +4,8 @@ blue.light=#f2f7fc
 blue.sky=#ddeeff
 info=#f2f7fc url(${org.nuxeo.ecm.contextPath}/icons/tip.gif) 2px 3px no-repeat
 tooltip=#f2f7fc url(${org.nuxeo.ecm.contextPath}/icons/lightbulb.png) 2px 3px no-repeat scroll
-topbar=#282b2e url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/small_gray_bar.png) top left repeat-x
+topbar=#101b3f
+footer=#2d313e
 breadcrumb=#eeeff0
 buttons=#cecfd1 url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/buttons.png) top left repeat-x
 disabled=#ebeff4 url(${org.nuxeo.ecm.contextPath}/img/button_disabled.gif) 0 0 repeat-x
