--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-borders.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-borders.properties
@@ -1,5 +1,6 @@
 whitethin=1px solid #ffffff
-topbar=1px solid #292929
+topbar=3px solid #ffffff
+footer=1px solid #292929
 leftcolumn=1px solid #e3e5e7
 lefcolumntitle=1px solid #9e9e9e
 buttons=1px solid #bfc5cb
