--- a/nuxeo-platform-document-routing-core/pom.xml
+++ b/nuxeo-platform-document-routing-core/pom.xml
@@ -26,6 +26,8 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-usermanager-api</artifactId>
     </dependency>
+
+    <!-- test deps -->
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-userworkspace-core</artifactId>
@@ -70,6 +72,12 @@
       <groupId>net.sf.opencsv</groupId>
       <artifactId>opencsv</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.json-lib</groupId>
+      <artifactId>json-lib</artifactId>
+      <scope>test</scope>
+      <classifier>jdk15</classifier>
     </dependency>
   </dependencies>
 </project>
