NXP-6842: Replace nuxeo home logo by DM one, remove admin background image

--- a/nuxeo-user-center/src/main/resources/themes/palettes/galaxy-user-center-backgrounds.properties
+++ b/nuxeo-user-center/src/main/resources/themes/palettes/galaxy-user-center-backgrounds.properties
@@ -7,7 +7,7 @@ topbar=#282b2e url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/small_gray_bar.
 breadcrumb=#eeeff0
 buttons=#cecfd1 url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/buttons.png) top left repeat-x
 disabled=#ebeff4 url(${org.nuxeo.ecm.contextPath}/img/button_disabled.gif) 0 0 repeat-x
-maincell=#fff url(${org.nuxeo.ecm.contextPath}/img/galaxy_admin_logo.png) bottom right no-repeat
+maincell=#fff url(${org.nuxeo.ecm.contextPath}/img/galaxy_logo.png) bottom right no-repeat
 tablethead=#f1f2f3
 tableevenlines=#ecf6ff
 tabiselected=#4e9ae1
