--- a/pom.xml
+++ b/pom.xml
@@ -994,7 +994,7 @@
       <dependency>
         <groupId>org.artofsolving.jodconverter</groupId>
         <artifactId>jodconverter-core</artifactId>
-        <version>3.0-beta-3</version>
+        <version>3.0-beta-3-NXP-6723</version>
         <scope>provided</scope>
       </dependency>
       <!-- others -->
