NXP-6873 Put web engine sample modules under continuous integration umbrella

--- a/nuxeo-webengine-features/pom.xml
+++ b/nuxeo-webengine-features/pom.xml
@@ -28,6 +28,8 @@
     <module>nuxeo-webengine-blogs</module>
     <module>nuxeo-webengine-blogs-api</module>
     <module>nuxeo-webengine-blogs-core</module>
+    <module>nuxeo-webengine-samples-base</module>
+    <module>nuxeo-webengine-samples-extended</module>
   </modules>
 
   <profiles>
