NXP-6853: add binaries GC to admin center

--- a/nuxeo-admin-center/nuxeo-admin-center/pom.xml
+++ b/nuxeo-admin-center/nuxeo-admin-center/pom.xml
@@ -32,6 +32,10 @@
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-storage-sql</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-storage-sql-management</artifactId>
     </dependency>
     <dependency>
