--- a/nuxeo-core-facade/pom.xml
+++ b/nuxeo-core-facade/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-parent</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2-RC1</version>
   </parent>
 
   <artifactId>nuxeo-core-facade</artifactId>
