--- a/pom.xml
+++ b/pom.xml
@@ -6,24 +6,24 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2-RC1</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.platform</groupId>
   <artifactId>nuxeo-dm-parent</artifactId>
-  <version>5.4.2-SNAPSHOT</version>
+  <version>5.4.2-RC1</version>
   <name>Nuxeo DM Parent</name>
   <packaging>pom</packaging>
   <description>Nuxeo DM: Parent.</description>
 
   <properties>
-    <nuxeo.common.version>5.4.2-SNAPSHOT</nuxeo.common.version>
-    <nuxeo.runtime.version>5.4.2-SNAPSHOT</nuxeo.runtime.version>
-    <nuxeo.core.version>5.4.2-SNAPSHOT</nuxeo.core.version>
-    <nuxeo.services.version>5.4.2-SNAPSHOT</nuxeo.services.version>
-    <nuxeo.jsf.version>5.4.2-SNAPSHOT</nuxeo.jsf.version>
-    <nuxeo.features.version>5.4.2-SNAPSHOT</nuxeo.features.version>
-    <nuxeo.dm.version>5.4.2-SNAPSHOT</nuxeo.dm.version>
+    <nuxeo.common.version>5.4.2-RC1</nuxeo.common.version>
+    <nuxeo.runtime.version>5.4.2-RC1</nuxeo.runtime.version>
+    <nuxeo.core.version>5.4.2-RC1</nuxeo.core.version>
+    <nuxeo.services.version>5.4.2-RC1</nuxeo.services.version>
+    <nuxeo.jsf.version>5.4.2-RC1</nuxeo.jsf.version>
+    <nuxeo.features.version>5.4.2-RC1</nuxeo.features.version>
+    <nuxeo.dm.version>5.4.2-RC1</nuxeo.dm.version>
   </properties>
 
   <modules>
