--- a/nuxeo-webdav/pom.xml
+++ b/nuxeo-webdav/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-filesystem-connectors</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2-RC1</version>
   </parent>
 
   <artifactId>nuxeo-webdav</artifactId>
