--- a/nuxeo-automation/nuxeo-automation-features/pom.xml
+++ b/nuxeo-automation/nuxeo-automation-features/pom.xml
@@ -130,6 +130,10 @@
       <artifactId>nuxeo-runtime</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.runtime</groupId>
+      <artifactId>nuxeo-runtime-management</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.common</groupId>
       <artifactId>nuxeo-common</artifactId>
     </dependency>
@@ -144,7 +148,7 @@
     <dependency>
       <groupId>javax.persistence</groupId>
       <artifactId>persistence</artifactId>
-    </dependency>    
+    </dependency>
     <!-- for audit serialization -->
     <dependency>
       <groupId>net.sf.json-lib</groupId>
