add nuxeo-platform-replication to default addons list

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
     <module>nuxeo-platform-user-dashboard-compat</module>
     <module>nuxeo-platform-users-management-compat</module>
     <module>nuxeo-platform-rendition</module>
+    <module>nuxeo-platform-replication</module>
   </modules>
 
   <repositories>
