NXP-6308: Adding more DAV tests

--- a/nuxeo-distribution-dm/ftest/funkload/Dav.conf
+++ b/nuxeo-distribution-dm/ftest/funkload/Dav.conf
@@ -17,7 +17,17 @@ user_agent = Mozilla/5.0 (X11; U; Linux i686; en; rv:1.7.10) Gecko/20050912 Fire
 # Tests description and configuration
 #
 [testDav]
-description=Test dav methods
+description=Misc DAV tests
+
+[testWriter]
+description=Write document in DAV
+nb_docs=5
+
+[testUserAgents]
+description=Check DAV User agent redirection
+
+[testLocks]
+description=DAV Lock tests
 
 
 # ------------------------------------------------------------
