NXP-6938 Add AuditPageProvider and addociated tests

--- a/nuxeo-platform-audit/nuxeo-platform-audit-api/pom.xml
+++ b/nuxeo-platform-audit/nuxeo-platform-audit-api/pom.xml
@@ -22,6 +22,15 @@
       <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-event</artifactId>
     </dependency>
-  </dependencies>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-query-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
+  
+</dependencies>
 
 </project>
