--- a/nuxeo-platform-userworkspace/nuxeo-platform-userworkspace-core/pom.xml
+++ b/nuxeo-platform-userworkspace/nuxeo-platform-userworkspace-core/pom.xml
@@ -19,6 +19,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-event</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-userworkspace-api</artifactId>
     </dependency>
