--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,7 @@
       <dependency>
         <groupId>org.nuxeo</groupId>
         <artifactId>nuxeo-ftest</artifactId>
-        <version>1.3</version>
+        <version>1.4-SNAPSHOT</version>
         <type>zip</type>
         <scope>provided</scope>
       </dependency>
@@ -2479,7 +2479,7 @@
         <plugin>
           <groupId>org.nuxeo.build</groupId>
           <artifactId>nuxeo-distribution-tools</artifactId>
-          <version>1.7</version>
+          <version>1.8-SNAPSHOT</version>
           <extensions>true</extensions>
         </plugin>
         <!-- Cannot upgrade after 2.2-beta-1 because of MASSEMBLY-285 -->
