make nuxeo-distribution-tomcat-tests depends on nuxeo-distribution-tomcat

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,9 @@
     <profile>
       <id>itest</id>
       <modules>
+        <module>nuxeo-distribution-cap</module>
+        <module>nuxeo-distribution-dm</module>
+        <module>nuxeo-distribution-tomcat</module>
         <module>nuxeo-distribution-tomcat-tests</module>
       </modules>
     </profile>
