--- a/nuxeo-distribution-tomcat-tests/pom.xml
+++ b/nuxeo-distribution-tomcat-tests/pom.xml
@@ -39,6 +39,12 @@
       <groupId>org.nuxeo.ecm.distribution</groupId>
       <artifactId>nuxeo-distribution-cap-tests</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.distribution</groupId>
+      <artifactId>nuxeo-distribution-tomcat</artifactId>
+      <type>zip</type>
+      <classifier>nuxeo-dm</classifier>
+    </dependency>
   </dependencies>
 
   <build>
@@ -60,7 +66,7 @@
               <goal>integration-test</goal>
             </goals>
             <configuration>
-            <argLine>-Dlog4j.configuration=${maven.project.build.directory}/tomcat/lib/log4j.xml -DconnectPassword=${connect.password}</argLine>
+              <argLine>-Dlog4j.configuration=${maven.project.build.directory}/tomcat/lib/log4j.xml -DconnectPassword=${connect.password}</argLine>
             </configuration>
           </execution>
           <execution>
